# pppset

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  _typos.toml  flake.nix  install.sh  luatex-style.sty  markdown2pdf
.claude/: settings.json
nix/: pppset.nix
src/: article.sty  beamer.sty  luatex-style.sty  markdown2article  markdown2pdf  markdown2slide
src/share/: article.sty  beamer.sty
src/share/pppset/: article.sty  beamer.sty
